# memo-node

./: .gitignore  ARCHITECTURE.md  Cargo.toml  NEXT_STEPS.md  README.md  SETUP_PI.md  build.rs
config/: default.toml
proto/: memo.proto
src/: config.rs  main.rs  storage.rs  transcribe.rs
src/api/: http.rs  mod.rs  websocket.rs
src/audio/: ble.rs  decoder.rs  mod.rs
src/sync/: discovery.rs  mod.rs  peer.rs
