[package]
name = "memo-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.11"
prost = "0.12"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# mDNS discovery
mdns-sd = "0.10"

# BLE
btleplug = "0.11"

# Audio decoding
opus = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1.1"

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "memo-node"
path = "src/main.rs"
